--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ pillow = "*"
 [dev-packages]
 pylint = "*"
 pendulum = "*"
+codecov = "*"
+coverage = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
