--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 numpy = "*"
-pytest = "*"
 pyquaternion = "*"
 pillow = "*"
 
@@ -14,6 +13,9 @@ pylint = "*"
 pendulum = "*"
 codecov = "*"
 coverage = "*"
+pytest-cov = "*"
+pytest = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.7"
