--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.7-dev"
+  - "3.7"
+  - "3.8"
 
 install:
-  - pip install pipenv
-  - pipenv install --dev
+  - pip install poetry
+  - poetry install
 
 script:
   - py.test --cov=bbox tests/
