--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,5 @@ matplotlib = "^3.2.1"
 pillow = "^9.0.0"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
