--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Varun Agrawal <varagrawal@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.7"
 numpy = "^1.18.2"
 pyquaternion = "^0.9.5"
 
@@ -14,11 +14,11 @@ pyquaternion = "^0.9.5"
 pylint = "^2.4.4"
 pendulum = "^2.1.0"
 codecov = "^2.0.22"
-coverage = "^5.0.4"
+coverage = ">=5.5"
 pytest-cov = "^2.8.1"
 pytest = "^5.4.1"
 matplotlib = "^3.2.1"
-pillow = "^7.1.0"
+pillow = "^9.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
