--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 
 requires-python = ">= 3.10"
 dependencies = [
-  "numpy>=1.22.0",
+  "numpy>=2.2.6",
   "pyquaternion>=0.9.5"
 ]
 
@@ -25,6 +25,7 @@ dev = [
     "pytest>=6.2.5",
     "matplotlib>=3.2.1",
     "pillow>=10.3.0",
+    "loguru>=0.7.3",
 ]
 
 [build-system]
